make tests namespace

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": {
-			"yii2module\\lang\\": "src"
+			"yii2module\\lang\\": "src",
+			"yii2module\\lang\\tests\\": "tests"
 		}
 	},
 	"require": {
